--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ cachetools==5.3.1
 certifi==2023.7.22
 cffi==1.16.0
 charset-normalizer==3.2.0
+click==8.1.7
 frozenlist==1.4.0
 google-api-core==2.12.0
 google-auth==2.23.3
@@ -16,6 +17,7 @@ google-cloud-vision==3.4.4
 googleapis-common-protos==1.60.0
 grpcio==1.59.0
 grpcio-status==1.59.0
+gTTS==2.4.0
 idna==3.4
 magic-filter==1.0.11
 multidict==6.0.4
